# Multimodal_RAG_System

./: .dockerignore  .gitignore  Dockerfile  README.md  app.db  docker-compose.yml  f  main.py  pyproject.toml  requirements.txt
api/: main.py
app/: main.py
app/routes/: __init__.py  login.py  users.py
data_preprocessing/: chunking.py  ingest.py  test_ingest.py  vector_db.py
databases/: database.py  models.py  oauth2.py  schemas.py  utils.py
llm/: ask_llm.py  llm_connection.py
prompts/: system_prompt.txt  system_prompt_v2.txt
tests/: test_chat_history.py
