[project]
name = "chatpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "langchain==1.2.15",
    "langchain-classic==1.0.4",
    "langchain-community==0.4.1",
    "langchain-core==1.3.0",
    "langchain-experimental==0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters==1.1.2",
    "langdetect==1.0.9",
    "langgraph==1.1.8",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.10",
    "langgraph-sdk==0.3.13",
    "langsmith>=0.8.16",
    "llama-cloud>=0.1.46",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-langchain==0.5.0",
    "llama-index-embeddings-openai==0.6.0",
    "llama-index-instrumentation==0.5.0",
    "llama-index-llms-openai==0.7.5",
    "llama-index-postprocessor-sbert-rerank==0.5.0",
    "llama-index-retrievers-bm25==0.7.1",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "llama-index-workflows==2.20.0",
    "llama-parse>=0.6.94",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "spacy>=3.8.14",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.49.0",
]
